@@ -1,4 +1,5 @@
 07 Aut 2018
+fix: overwrite key browse_js uglify.php
 update: write_classes() to write chat/js/config bbCodeTags
 
 06 Aug 2018
